--- a/doc/history.txt
+++ b/doc/history.txt
@@ -1,6 +1,17 @@
 Version history
 ===============
 
+0.7.3
+-----
+
+2017-06-14
+
+NepsterLix is 100 % solvable with 0.7.2 physics.
+
+The replay browser offers a button "Verify dir" that verifies all replays
+in the current directory, recursing through subdirectories. Lix shows the
+results in the GUI and copies them to the logfile.
+
 0.7.2
 -----
 
