--- a/doc/history.txt
+++ b/doc/history.txt
@@ -1,6 +1,16 @@
 Version history
 ===============
 
+0.7.5
+-----
+
+2017-06-20
+
+lemforum: Completely Ridiculous Level is narrower by 48 pixels.
+203/240 levels are proven solvable in 0.7 physics, let's cover 37 more.
+
+Down-facing tumblers drown head-first, not feet-first.
+
 0.7.4
 -----
 
